--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <header>
-            <h1>Site's title</h1>
+            <h1>Free Course </h1>
         </header>
         <article>
-            <h2>article 001</h2>
-            <p>Text article 001</p>
+            <h2>HTML5 with CSS course </h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit non voluptatum, quasi quidem odit asperiores at! Similique laudantium ratione praesentium fuga soluta voluptate distinctio ab necessitatibus, voluptas facere iure doloribus?</p>
         </article>
         <article>
-            <h2>article 002</h2>
-            <p>Text article 002</p>
+            <h2>JavaScript Course</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora at nobis, expedita natus vel explicabo magni! A exercitationem magnam est sapiente minus nesciunt numquam earum deserunt! Quaerat quas earum mollitia!</p>
         </article>
 
     </main>
