--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
     <main>
         <header>
             <h1>Free Course </h1>
+            <img src="https://github.com/gustavoguanabara/projeto-site/blob/master/imagens/curso-em-video-cor.png" alt="Curso Em Video">
         </header>
         <article>
             <h2>HTML5 with CSS course </h2>
+            <img src="https://github.com/gustavoguanabara/projeto-site/blob/master/imagens/curso-em-video-pb.png" alt="">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit non voluptatum, quasi quidem odit asperiores at! Similique laudantium ratione praesentium fuga soluta voluptate distinctio ab necessitatibus, voluptas facere iure doloribus?</p>
         </article>
         <article>
             <h2>JavaScript Course</h2>
+            <img class lado src="https://github.com/gustavoguanabara/projeto-site/blob/master/imagens/curso-javascript.png" alt="Curso JS">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora at nobis, expedita natus vel explicabo magni! A exercitationem magnam est sapiente minus nesciunt numquam earum deserunt! Quaerat quas earum mollitia!</p>
         </article>
 
